@@ -1,3 +1,12 @@
+2010-07-06  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls/ItemContainerGeneratorTest.cs: If
+	  the item has already been added to the ContainerItemMap we
+	  shouldn't replace the existing one. This can happen if you
+	  do something like: itemsControl.ItemsSource = new [] { 5, 5,
+	  5, 5 }. Fixes PPC.ItemContainerGeneratorTest and a new
+	  moon-unit.
+
 2010-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* System.Windows.Media/VisualTreeHelperTest.cs: Mark a few regressions
